# 2D-RayCaster

./: .gitignore  README.md  raycaster.py
benchmark/: README.md  bench_jax.py  run_bench.py
benchmark/results/: RTX_4080_SUPER.md
examples/: compare_demo.py  dynamic_demo.py  quickstart.py
maps/: sample_map.yaml
range_libc/pywrapper/: RangeLibc.cpp  pyproject.toml  range_libc_pybind.cpp  setup.py
results/: 2026-06-17_ryzen7950x_rtx4080super.md
